// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterCard renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="character-card relative h-full text-center"
      >
        <img
          alt="3-D Man"
          class="w-full h-120 object-cover"
          src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
        />
        <div
          class="absolute bottom-0 left-1/2 transform -translate-x-1/2 w-full bg-white"
        >
          <div
            class="p-4"
          >
            <h5
              class="text-xl font-bold"
            >
              3-D Man
            </h5>
            <div
              class="container-1011334 max-lines"
            >
              <div
                class="text-gray-500"
              >
                <p
                  id="contentdiv-1011334"
                >
                  What an interesting description!
                </p>
              </div>
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <a
              class="text-white bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded block"
              href="/character/1011334"
            >
              Find out more
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="character-card relative h-full text-center"
    >
      <img
        alt="3-D Man"
        class="w-full h-120 object-cover"
        src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg"
      />
      <div
        class="absolute bottom-0 left-1/2 transform -translate-x-1/2 w-full bg-white"
      >
        <div
          class="p-4"
        >
          <h5
            class="text-xl font-bold"
          >
            3-D Man
          </h5>
          <div
            class="container-1011334 max-lines"
          >
            <div
              class="text-gray-500"
            >
              <p
                id="contentdiv-1011334"
              >
                What an interesting description!
              </p>
            </div>
          </div>
        </div>
        <div
          class="text-center mb-4"
        >
          <a
            class="text-white bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded block"
            href="/character/1011334"
          >
            Find out more
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`CharacterCard renders correctly with another character 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="character-card relative h-full text-center"
      >
        <img
          alt="A-Bomb (HAS)"
          class="w-full h-120 object-cover"
          src="http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16.jpg"
        />
        <div
          class="absolute bottom-0 left-1/2 transform -translate-x-1/2 w-full bg-white"
        >
          <div
            class="p-4"
          >
            <h5
              class="text-xl font-bold"
            >
              A-Bomb (HAS)
            </h5>
            <div
              class="container-1017100 max-lines"
            >
              <div
                class="text-gray-500"
              >
                <p
                  id="contentdiv-1017100"
                >
                  Rick Jones has been Hulk's best bud since day one, but now he's more than a friend...he's a teammate! Transformed by a Gamma energy explosion, A-Bomb's thick, armored skin is just as strong and powerful as it is blue. And when he curls into action, he uses it like a giant bowling ball of destruction! 
                </p>
              </div>
            </div>
          </div>
          <div
            class="text-center mb-4"
          >
            <a
              class="text-white bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded block"
              href="/character/1017100"
            >
              Find out more
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="character-card relative h-full text-center"
    >
      <img
        alt="A-Bomb (HAS)"
        class="w-full h-120 object-cover"
        src="http://i.annihil.us/u/prod/marvel/i/mg/3/20/5232158de5b16.jpg"
      />
      <div
        class="absolute bottom-0 left-1/2 transform -translate-x-1/2 w-full bg-white"
      >
        <div
          class="p-4"
        >
          <h5
            class="text-xl font-bold"
          >
            A-Bomb (HAS)
          </h5>
          <div
            class="container-1017100 max-lines"
          >
            <div
              class="text-gray-500"
            >
              <p
                id="contentdiv-1017100"
              >
                Rick Jones has been Hulk's best bud since day one, but now he's more than a friend...he's a teammate! Transformed by a Gamma energy explosion, A-Bomb's thick, armored skin is just as strong and powerful as it is blue. And when he curls into action, he uses it like a giant bowling ball of destruction! 
              </p>
            </div>
          </div>
        </div>
        <div
          class="text-center mb-4"
        >
          <a
            class="text-white bg-blue-500 hover:bg-blue-700 font-bold py-2 px-4 rounded block"
            href="/character/1017100"
          >
            Find out more
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
